Update HelpWindow testcase